--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,7 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/hamburger/page.js"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+
+  "staticPageGenerationTimeout": "120"
 }
